--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="weather-container">
             <div class="data-1" id="data">
                 <div class="main-details">
-                    <h1 id="temperature"><span id="temp"></span>   celcius</h1>
+                    <h1 id="temperature"><span id="temp"></span>&deg;C</h1>
                     <h1 class="title">city <span id="cityName"></span></h1>
                 </div>
 
